--- a/index.html
+++ b/index.html
@@ -1,4 +1,41 @@
 ---
 layout: splash
-author_profile: true
+permalink: /
+hidden: true
+header:
+  overlay_color: "#5e616c"
+  overlay_image: /assets/images/header_img1a.png
+  actions:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:jianying.wang@gmail.com"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/jianying-wang"
+excerpt: >
+    Explore, evolve, grow. Because life is short.<br />
+feature_row:
+  - image_path: /assets/images/sand2.png
+    alt: "Bio"
+    title: "Life long learner"
+    excerpt: "Learn from school, work, books, videos, online, offline, everywhere"
+    url: "/bio/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
+  - image_path: /assets/images/sand2.png
+    alt: "Interests"
+    title: "Make it interesting"
+    excerpt: "Life is too short to not make it interesting. What would you do to make it worth it?"
+    url: "/interests/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
+  - image_path: /assets/images/sand3.png
+    alt: "Projects"
+    title: "Always exploring"
+    excerpt: "For fun, for work, for family and community, you name it!"
+    url: "/projects/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
 ---
+
+{% include feature_row %}
