--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@ feature_row:
     alt: "Bio"
     title: "Life is a journey"
     excerpt: "Every individual is an accumulation of their past. Past, present, and future..."
-    url: "/bio/"
-    btn_class: "btn--primary"
+<!--    url: "/bio/"-->
+<!--    btn_class: "btn&#45;&#45;primary"-->
 <!--    btn_label: "Learn more"-->
   - image_path: /assets/images/sand4_small.png
     alt: "Interests"
     title: "Looking Forward"
     excerpt: "Whatever we do, life is too short to not make it interesting."
-    url: "/interests/"
-    btn_class: "btn--primary"
+<!--    url: "/interests/"-->
+<!--    btn_class: "btn&#45;&#45;primary"-->
 <!--    btn_label: "Learn more"-->
   - image_path: /assets/images/sand5_small.png
     alt: "Reflections"
     title: "Take a Moment"
     excerpt: "We're here because we think. Observations, reflections, learnings, some things are worth writing down before they're forgotten."
-    url: "/projects/"
-    btn_class: "btn--primary"
+<!--    url: "/projects/"-->
+<!--    btn_class: "btn&#45;&#45;primary"-->
 <!--    btn_label: "Learn more"      -->
 ---
 
