--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@ excerpt: >
 feature_row:
   - image_path: /assets/images/sand2_small.png
     alt: "Bio"
-    title: "Life is a journey"
-    excerpt: "Every individual is an accumulation of their past. Past, present, and future..."
+    title: "Past"
+    excerpt: "Every individual is an accumulation of their past..."
     url: "/bio/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/sand4_small.png
-    alt: "Interests"
+    alt: "Present"
     title: "Looking Forward"
-    excerpt: "Whatever we do, life is too short to not make it interesting."
+    excerpt: "Life is enriched by what we do what we do..."
     url: "/interests/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/sand5_small.png
     alt: "Reflections"
-    title: "Take a Moment"
-    excerpt: "We're here because we think. Observations, reflections, learnings, some things are worth writing down before they're forgotten."
+    title: "Future"
+    excerpt: "We're here because we think. Thoughts and reflections for future reference..."
     url: "/projects/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
