--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ feature_row:
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/sand4_small.png
-    alt: "Present"
-    title: "Looking Forward"
-    excerpt: "Life is enriched by what we do what we do..."
+    alt: "Interests"
+    title: "Present"
+    excerpt: "Life is enriched by what we do..."
     url: "/interests/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
